added list of properties by coords
