# api/models/index.js
@@ -1,0 +1,4 @@
+'use strict';
+
+require('./property');
+require('./province');
